# langgraph-multiagent-boilerplate

./: .env.example  .gitignore  .windsurfrules  =0.0.16  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_TASKS.md  PROJECT_OVERVIEW.md  README.md  pyproject.toml  requirements.txt  test_openrouter_api.py
.github/workflows/: test.yml
app/: main.py
app/api/: __init__.py  exceptions.py
app/api/middleware/: security.py
app/api/routes/: __init__.py  conversation.py  crew.py  storage.py
app/core/: config.py
app/core/langgraph/: __init__.py  supervisor.py
app/db/: base.py
app/models/: activity_log.py  conversation.py  crew.py
app/schemas/: conversation.py  crew.py
app/services/: ai_provider.py  conversation_service.py  crew_service.py  mcp_service.py  storage_service.py
tests/: conftest.py  manual_test_openrouter.py
tests/api/: test_conversation_api.py
tests/demo/: test_multiagent_workflow.py
tests/services/: test_agent_service.py  test_crew_service.py
